# communex

./: .gitignore  CHANGELOG  LICENSE  Makefile  README.md  flake.nix  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: nix_checks.yml  tests.yml  type-checker.yml
docs/: nodes.json  nodes.md  validatorlist.json
docs/modules/: miner.md
docs/running_a_node/: .env  README.md  bootnodes.txt  docker-compose.yaml  node-start.sh
docs/validators/: list.json
nix/: poetry2nix-overrides.nix
src/communex/: __init__.py  _common.py  _global.py  balance.py  client.py  encryption.py  errors.py  key.py  logging.py  misc.py  password.py  raw_ws_ops.py  types.py  util.py
src/communex/cli/: __init__.py  __main__.py  _common.py  balance.py  key.py  misc.py  module.py  network.py  root.py  subnet.py
src/communex/compat/: __init__.py  _util.py  key.py  storage.py  types.py
src/communex/faucet/: pow.py  powv2.py
src/communex/module/: __init__.py  _ip_limiter.py  _protocol.py  _signer.py  _util.py  client.py  module.py  server.py  stuff.md
src/communex/module/_rate_limiters/: _stake_limiter.py  limiters.py
src/communex/module/example/: gpt.py  openai.py
src/communex/util/: __init__.py  memo.py  mutex.py
tests/: conftest.py  key_config.py  str_utils.py  test_cli_key.py
tests/cli/: test_cli_balance.py  test_cli_context.py  test_cli_key.py  test_cli_misc.py  test_cli_module.py  test_cli_network.py  test_cli_subnet.py
tests/module/: conftest.py  test_module.py  test_module_client.py  test_module_server.py
(+2 files in other folders)
