[tool.poetry]
name = "communex"
version = "0.1.0"
description = "A library for Commune network focused on simplicity"
authors = ["Kelvin Steiner <kelvinsteinersantos@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
